Fix: align landing intro and info to same vertical position

--- a/src/components/styles/SocialIcons.css
+++ b/src/components/styles/SocialIcons.css
@@ -9,7 +9,7 @@
 }
 .social-icons {
   position: absolute;
-  left: -20px;
+  left: -25px;
   bottom: 20px;
   display: none;
   flex-direction: column;
